# boatrace-scheduler

./: .dockerignore  .env.original  CHANGELOG.md  Dockerfile  Dockerfile.production  LICENSE  README.md  docker-compose.yml  logging.conf  main.py  pyproject.toml
.github/workflows/: build.yml
boatrace_scheduler/: __init__.py  __main__.py  jobs.py  utils.py
