[project]
name = "boatrace-scheduler"
version = "0.1.0-dev"
description = "競艇自動投票システムをスケジュール制御する"
authors = [
    {name = "u6k",email = "u6k.apps@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
